# feels-floor-sim

./: .gitignore  .nbstripout  LICENSE  README.md  environment.yml  flake.nix  justfile  notebook.ipynb  postBuild  pyproject.toml  requirements.txt
.github/workflows/: notebooks.yml
docs/: 000_feels_architecture.md  100_simulation_model.md  101_simulation_implementation.md  102_simulation_parameters.md
experiments/configs/: params_baseline.json
feels_sim/: __init__.py  __main__.py  analysis.py  cli.py  config.py  core.py  market.py  metrics.py  participants.py  plotting.py  pricing.py  state.py
notebooks/: 01_baseline.ipynb  01_baseline.ran.ipynb  02_parameter_sweep.ipynb  03_calibration.ipynb  calibration.ipynb
tests/: __init__.py  run_tests.py  test_core.py  test_fees.py  test_metrics.py  test_participants.py  utils.py
