[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "feels-floor-sim"
version = "0.1.0"
description = "Feels Protocol floor price simulation"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "polars>=0.20.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]