[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "feels-floor-sim"
version = "0.1.0"
description = "Feels Protocol floor price simulation"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "polars>=0.20.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",  # Enhanced statistical plotting
    "typer>=0.9.0",
    "agentpy>=0.1.5,<0.2",
    "pandas>=1.5.0",  # Required by AgentPy
    "networkx>=2.8",  # Required by AgentPy
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
